Added support for 256-color, 16-color, and monochrome bitmaps

--- a/BitmapReader.Tests/BitmapReader.Tests.csproj
+++ b/BitmapReader.Tests/BitmapReader.Tests.csproj
@@ -27,6 +27,24 @@
       <None Update="test_file.bin">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
+      <None Update="10x10_16clr_all_white.bmp">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="10x10_16clr_one_red_pixel.bmp">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="10x10_256clr_all_white.bmp">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="10x10_256clr_one_red_pixel.bmp">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="10x10_mono_all_white.bmp">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="10x10_mono_one_red_pixel.bmp">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
